<resources>
    <string name="app_name">Player-sdk</string>

    <string name="start_live">推流</string>
    <string name="watch_live">登录</string>
    <string name="str_rtmp">RTP</string>

    <string name="text_server_ip">服 务IP:</string>
    <string name="text_room_id">房 间ID:</string>
    <string name="hint_server_ip">服务器IP地址</string>
    <string name="hint_room_id">房间ID</string>
    <string name="str_rtmp_success">RTP 连接成功</string>
    <string name="str_rtmp_failed">RTP 连接失败</string>
    <string name="str_rtmp_status">RTP 延迟：%1$d 网络：%2$d</string>
    <string name="str_rtmp_reconnecting">RTP 重连中(%1$d秒)...</string>
    <string name="str_rtmp_play_success">RTP 播放成功</string>
    <string name="str_rtmp_pull_status">RTP 丢包率：%1$d 码率：%2$d</string>
    <string name="str_rtmp_play_failed">登录失败 错误码：%1$d </string>
    <string name="str_rtmp_play_failed_network">登录失败 网络不通 </string>
    <string name="str_rtmp_play_failed_kicked">账号在其他位置登录</string>
    <string name="version">V0.0.1</string>

    <string name="str_rtmp_company">www.mediapro.cc</string>
</resources>
