<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mediapro.demo.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/mediapro" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/login_server_ip_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="4dp"
                android:text="@string/text_server_ip" />

            <EditText
                android:id="@+id/login_server_ip"
                android:layout_width="fill_parent"
                android:layout_height="35sp"
                android:layout_toRightOf="@id/login_server_ip_textview"
                android:background="@drawable/login_edittext_bg"
                android:hint="@string/hint_server_ip"
                android:inputType="numberDecimal|text"
                android:padding="2dp"
                android:maxLines="1"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/login_room_id_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="4dp"
                android:text="@string/text_room_id" />

            <EditText
                android:id="@+id/login_room_id"
                android:layout_width="fill_parent"
                android:layout_height="35sp"
                android:layout_toRightOf="@id/login_room_id_textview"
                android:background="@drawable/login_edittext_bg"
                android:hint="@string/hint_room_id"
                android:inputType="numberDecimal"
                android:padding="2dp"
                android:maxLines="1"
                android:textSize="16sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btn_watch_live"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnBtnClicked"
                android:text="@string/watch_live" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/str_rtmp_company"/>
</RelativeLayout>
